/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package airplane;

/**
 * @author Martin LEGRIS
 * @author Sacha MASSON
 */
public enum WheelsEnum {
    RENTRE,
    MOUVEMENT,
    SORTI;
}
